align store name to center. ensure image is the same ratio (16:9) as one another to avoid text beginning in the wrong spot in the card

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -205,11 +205,13 @@ h2 {
     padding: 25px 35px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 15px;
+}
+
+#locations h3 {
+    text-align: center;
 }
 
 #locations .card img {
     width: 100%;
-    flex: 1;
 }
